реализована страница администрирования добавленных коворкингов и её функционал, внесены правки

--- a/src/app/components/ad-business/ad-business.component.html
+++ b/src/app/components/ad-business/ad-business.component.html
@@ -15,7 +15,7 @@
         <li><a routerLink="/favourites">Избранное</a></li>
         <li><a routerLink="/profile">Настройки профиля</a></li>
         <li><a routerLink="/place-settings">Настройки мест</a></li>
-        <li style="border-right: solid 2px black ;" *ngIf="user.role_id == 2"><a
+        <li style="border-right: solid 2px black ;" *ngIf="user.role_id == 2 || user.role_id == 3"><a
             routerLink="/ad-business">Продвижение</a></li>
       </ul>
     </div>
