--- a/src/app/components/admin/admin-main-page/admin-main-page.component.html
+++ b/src/app/components/admin/admin-main-page/admin-main-page.component.html
@@ -6,7 +6,7 @@
       <img src="assets/admin/admin-first.svg" class="item-img first" alt="first">
       <p>Все заявки на добавление места</p>
       <h5>Посмотреть полный список заявок на добавление места, которые оставили пользователи</h5>
-      <button class="direct-btn" type="button">
+      <button class="direct-btn" type="button" routerLink="/admin/requests-to-add">
         <span>Перейти</span>
         <img src="assets/admin/arrow.svg" alt="arrow">
       </button>
@@ -42,7 +42,7 @@
       <img src="assets/admin/admin-fourth.svg" class="item-img fourth" alt="fourth">
       <p>Все места</p>
       <h5>Посмотреть все места</h5>
-      <button class="direct-btn" type="button">
+      <button class="direct-btn" type="button" routerLink="/main">
         <span>Перейти</span>
         <img src="assets/admin/arrow.svg" alt="arrow">
       </button>
